--- a/Spaceship/Spaceship/src/main/resources/application.properties
+++ b/Spaceship/Spaceship/src/main/resources/application.properties
@@ -1,1 +1,6 @@
-spring.application.name=Spaceship
+spring.datasource.url=jdbc:postgresql://localhost:5432/spaceship_db
+spring.datasource.username=alext
+spring.datasource.password=ordenador99
+spring.jpa.hibernate.ddl-auto=update
+spring.jpa.show-sql=true
+spring.jpa.properties.hibernate.format_sql=true
