--- a/Spaceship/Spaceship/src/main/resources/application.properties
+++ b/Spaceship/Spaceship/src/main/resources/application.properties
@@ -1,6 +1,15 @@
+# Configuration for local environment
 spring.datasource.url=jdbc:postgresql://localhost:5432/spaceship_db
 spring.datasource.username=alext
-spring.datasource.password=ordenador99
+spring.datasource.password=${DB_Password}
+
 spring.jpa.hibernate.ddl-auto=update
 spring.jpa.show-sql=true
 spring.jpa.properties.hibernate.format_sql=true
+
+# Logging settings
+logging.level.org.hibernate.SQL=DEBUG
+logging.level.org.hibernate.type.descriptor.sql=TRACE
+
+spring.profiles.active=docker
+
